# neurocache-gateway-rust

./: .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  autoCommentPath.js  compose.yaml  project-hierarchy.txt  rootGrouper.js
src/: main.rs
src/crates/agent/: Cargo.toml
src/crates/agent/src/: lib.rs
src/crates/agent/src/internal/: api_key_utils.rs  create_agent_stream.rs  mod.rs  run_agent.rs
src/crates/agent_types/: Cargo.toml
src/crates/agent_types/src/: lib.rs
src/crates/health/: Cargo.toml
src/crates/health/src/: lib.rs
src/crates/logger/: Cargo.toml
src/crates/logger/src/: lib.rs
src/crates/logger/src/internal/: logger.rs  mod.rs
src/crates/root/: Cargo.toml
src/crates/root/src/: lib.rs
src/crates/supabase/: Cargo.toml
src/crates/supabase/src/: get-agent-graph.sql  lib.rs
