[package]
name = "neurocache-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
logger = { path = "src/crates/logger" }
health = { path = "src/crates/health" }
root = { path = "src/crates/root" }

[workspace]
members = [
    "src/crates/logger",
    "src/crates/health",
    "src/crates/root",
]