[package]
name = "neurocache-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio-stream = "0.1.14"
tokio = { version = "1.33.0", features = ["full"] }
logger = { path = "src/crates/logger" }
health = { path = "src/crates/health" }
agent = { path = "src/crates/agent" }
root = { path = "src/crates/root" }

[workspace]
members = [
    "src/crates/health",
    "src/crates/logger",
    "src/crates/agent",
    "src/crates/root",
]
