[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
futures = "0.3"
dotenv = "0.15.0"
serde_json = "1.0"
tokio-stream = "0.1.14"
logger = { path = "../logger" }
supabase = { path = "../supabase" }
agent_types = { path = "../agent_types" }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }