[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
futures = "0.3"
dotenv = "0.15.0"
serde_json = "1.0"
openssl = "0.10.59"
tokio-stream = "0.1.14"
uuid = { version = "1.5.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rdkafka = {version = "0.36.0", features = ["ssl", "sasl"] }
sasl2-sys = { version = "0.1.20+2.1.28", features = ["vendored"] }

agent_types = { path = "../agent_types" }
supabase = { path = "../supabase" }
logger = { path = "../logger" }
