[package]
name = "supabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde_json = "1.0"
tokio-stream = "0.1.14"
agent_types = { path = "../agent_types" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
logger = { path = "../logger" }